@@ -2,7 +2,7 @@ Title: Survival analysis, including penalised likelihood.
 Maintainer: Terry Therneau <therneau.terry@mayo.edu>
 Priority: recommended
 Package: survival
-Version: 2.36-1
+Version: 2.36-2
 Date: 2009-08-20
 Depends: stats, utils, graphics, splines, R (>= 2.0.0)
 LazyData: Yes
